--- a/SillyBirdProject/src/main/resources/edu/augustana/sillybirdproject/hello-view.fxml
+++ b/SillyBirdProject/src/main/resources/edu/augustana/sillybirdproject/hello-view.fxml
@@ -12,5 +12,5 @@
     </padding>
 
     <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <Button text="Hello Bird World!" onAction="#onHelloButtonClick"/>
 </VBox>
